Agregando validacion js

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             <label class="form-label" for="telefono">Número telefónico</label
             ><br />
             <select name="countryCode" id="code" class="form-control">
-              <option data-countryCode="MX" value="52">MX +52</option>
-              <option data-countryCode="CO" value="57">CO +57</option>
+              <option data-countryCode="MX" value="51">Peru +51</option>
+              <option data-countryCode="CO" value="51">CO +51</option>
               <optgroup label="Más países">
                 <option data-countryCode="AR" value="54">AR +54</option>
                 <option data-countryCode="BO" value="591">BO +591</option>
